# ufs-weather-model

./: .gitmodules  CMakeLists.txt  README-ufs_coastal.md  README.md  build.sh
ADCIRC-interface/: CMakeLists.txt  adcirc_files.cmake
ADCIRC-interface/cmake/: macros.cmake
CDEPS-interface/: cdeps_files.cmake
CMEPS-interface/: CMakeLists.txt
FVCOM-interface/: CMakeLists.txt  fvcom_files.cmake
PAHM-interface/: CMakeLists.txt  pahm_files.cmake
PAHM-interface/cmake/: macros.cmake
ROMS-interface/: CMakeLists.txt
SCHISM-interface/: CMakeLists.txt
cmake/: configure_apps.cmake
driver/: UFSDriver.F90
images/: coastalapp-usage.odt
modulefiles/: ufs_common.lua  ufs_frontera.intel.lua
tests/: default_vars.sh  detect_machine.sh  opnReqTest  rt.sh  rt_coastal.conf  rt_coastal_testing.conf  rt_utils.sh  run_test.sh
tests/fv3_conf/: coastal_adcirc_run.IN  coastal_datm_atmmesh.IN  coastal_fvcom_run.IN  coastal_hsofs_pahm2schism_run.IN  coastal_hsofs_schism_pam_run.IN  coastal_pahm2schism_run.IN  coastal_pahm_run.IN  coastal_roms_run.IN  coastal_schism_pam_run.IN  coastal_schism_run.IN  coastal_ww3_run.IN  compile_slurm.IN_frontera  fv3_slurm.IN_frontera
tests/opnReqTests/: thr.sh
tests/parm/: datm.streams.IN  datm.streams.coastal.IN  datm.streams.multi.coastal.IN  fd_nems.yaml  fd_ufs.yaml  nems.configure.coastal_datm_ocn.IN  nems.configure.coastal_datm_ocn_conn.IN  nems.configure.coastal_datm_ocn_wav.IN  nems.configure.coastal_datm_wav.IN  nems.configure.coastal_ocn.IN  nems.configure.coastal_wav.IN  ufs.configure.coastal_datm_ocn.IN  ufs.configure.coastal_datm_ocn_wav.IN  ufs.configure.coastal_datm_wav.IN  ufs.configure.coastal_wav.IN  ww3_shel.nml.IN
tests/tests/: coastal_florence_hsofs_atm2adc  coastal_florence_hsofs_atm2adc2ww3  coastal_florence_hsofs_atm2sch  coastal_florence_hsofs_atm2sch2ww3  coastal_florence_hsofs_atm2sch2ww3_nobc  coastal_florence_hsofs_pam2adc  coastal_florence_hsofs_pam2adc2ww3  coastal_florence_hsofs_pam2sch  coastal_florence_hsofs_pam2sch2ww3  coastal_florence_hsofs_sch_pam  coastal_idealized_shinnecock_atm2adc  coastal_idealized_shinnecock_atm2adc2ww3  coastal_idealized_shinnecock_atm2sch  coastal_idealized_shinnecock_atm2sch2ww3  coastal_idealized_shinnecock_atm2ww3  coastal_idealized_shinnecock_sch  coastal_idealized_shinnecock_ww3  coastal_ike_shinnecock.atm2ww3  coastal_ike_shinnecock_atm2adc  coastal_ike_shinnecock_atm2sch  coastal_ike_shinnecock_atm2sch2ww3  coastal_ike_shinnecock_atm2sch2ww3_debug  coastal_ike_shinnecock_atm2ww3  coastal_ike_shinnecock_sch  coastal_ike_shinnecock_ww3  coastal_irene_atm2roms  coastal_sandy_shinnecock_atm2adc  coastal_sandy_shinnecock_atm2adc2ww3  coastal_sandy_shinnecock_atm2sch  coastal_sandy_shinnecock_atm2sch2ww3  coastal_sandy_shinnecock_pam2adc  coastal_sandy_shinnecock_pam2adc2ww3  coastal_sandy_shinnecock_pam2sch  coastal_sandy_shinnecock_pam2sch2ww3  coastal_sandy_shinnecock_sch  coastal_sandy_shinnecock_sch_pam  coastal_scituateharbor_atm2fvc
